# pog

./: CMakeLists.txt  main.cpp
1.12.2024/: main.cpp
1.12.24/task1/: task
1.12.24/task2/: solve.cpp  task
2.12.24/: task1
2.12.24/task1/: solve.cpp
26.01.24/task1/: solve  task
